--- a/theme.css
+++ b/theme.css
@@ -1,8 +1,8 @@
 :root {
-  --color-primary: #beceb7;
-  --color-accent: #7e9d70;
-  --color-background: #dee6db;
-  --color-font: #798f70;
+  --color-primary: #647F57;
+  --color-accent: #9FB695;
+  --color-background: #5C7651;
+  --color-font: #beceb7;
   --color-red: #d1635f;
   --color-green: #658159;
   --color-purple:#8f709d;
